--- a/params/nav2_params_lotus_control_service.yaml
+++ b/params/nav2_params_lotus_control_service.yaml
@@ -49,12 +49,17 @@
 #   ros__parameters:
 #     use_sim_time: True
 
+map_server:
+  ros__parameters:
+    use_sim_time: True
+    yaml_filename: "blank_map.yaml"
+
 bt_navigator:
   ros__parameters:
     use_sim_time: True
     global_frame: map
     robot_base_frame: base_link
-    odom_topic: /odometry/filtered #/wheel/odometry
+    odom_topic: /odometry/global #/wheel/odometry
     bt_loop_duration: 10
     default_server_timeout: 20
     enable_groot_monitoring: True
@@ -173,31 +178,6 @@ local_costmap:
       height: 10
       resolution: 0.05
       robot_radius: 0.75
-      plugins: ["voxel_layer", "inflation_layer"]
-      inflation_layer:
-        plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.55
-      voxel_layer:
-        plugin: "nav2_costmap_2d::VoxelLayer"
-        enabled: True
-        publish_voxel_map: True
-        origin_z: 0.0
-        z_resolution: 0.05
-        z_voxels: 16
-        max_obstacle_height: 2.0
-        mark_threshold: 0
-        observation_sources: scan
-        scan:
-          topic: /scan
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "LaserScan"
-          raytrace_max_range: 10.0
-          raytrace_min_range: 0.0
-          obstacle_max_range: 9.5
-          obstacle_min_range: 0.0
       static_layer:
         map_subscribe_transient_local: True
       always_send_full_costmap: True
@@ -219,28 +199,10 @@ global_costmap:
       robot_radius: 0.85
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
-      obstacle_layer:
-        plugin: "nav2_costmap_2d::ObstacleLayer"
-        enabled: True
-        observation_sources: scan
-        scan:
-          topic: /scan
-          max_obstacle_height: 2.0
-          clearing: True
-          marking: True
-          data_type: "LaserScan"
-          raytrace_max_range: 10.0
-          raytrace_min_range: 0.0
-          obstacle_max_range: 9.5
-          obstacle_min_range: 0.0
+      plugins: ["static_layer"]
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
-      inflation_layer:
-        plugin: "nav2_costmap_2d::InflationLayer"
-        cost_scaling_factor: 3.0
-        inflation_radius: 0.55
       always_send_full_costmap: True
   global_costmap_client:
     ros__parameters:
@@ -298,77 +260,3 @@ waypoint_follower:
       plugin: "nav2_waypoint_follower::WaitAtWaypoint"
       enabled: True
       waypoint_pause_duration: 5 
-    
-# slam_toolbox:
-#   ros__parameters:
-
-#     # Plugin params
-#     solver_plugin: solver_plugins::CeresSolver
-#     ceres_linear_solver: SPARSE_NORMAL_CHOLESKY
-#     ceres_preconditioner: SCHUR_JACOBI
-#     ceres_trust_strategy: LEVENBERG_MARQUARDT
-#     ceres_dogleg_type: TRADITIONAL_DOGLEG
-#     ceres_loss_function: None
-
-#     # ROS Parameters
-#     odom_frame: odom
-#     map_frame: map
-#     base_frame: base_footprint
-#     scan_topic: /scan
-#     mode: mapping #localization
-
-#     # if you'd like to immediately start continuing a map at a given pose
-#     # or at the dock, but they are mutually exclusive, if pose is given
-#     # will use pose
-#     #map_file_name: test_steve
-#     #map_start_pose: [0.0, 0.0, 0.0]
-#     #map_start_at_dock: true
-
-#     debug_logging: false
-#     throttle_scans: 1
-#     transform_publish_period: 0.02 #if 0 never publishes odometry
-#     map_update_interval: 5.0
-#     resolution: 0.05
-#     max_laser_range: 20.0 #for rastering images
-#     minimum_time_interval: 0.5
-#     transform_timeout: 0.2
-#     tf_buffer_duration: 30.
-#     stack_size_to_use: 40000000 #// program needs a larger stack size to serialize large maps
-#     enable_interactive_mode: true
-
-#     # General Parameters
-#     use_scan_matching: true
-#     use_scan_barycenter: true
-#     minimum_travel_distance: 0.5
-#     minimum_travel_heading: 0.5
-#     scan_buffer_size: 10
-#     scan_buffer_maximum_scan_distance: 10.0
-#     link_match_minimum_response_fine: 0.1  
-#     link_scan_maximum_distance: 1.5
-#     loop_search_maximum_distance: 3.0
-#     do_loop_closing: true 
-#     loop_match_minimum_chain_size: 10           
-#     loop_match_maximum_variance_coarse: 3.0  
-#     loop_match_minimum_response_coarse: 0.35    
-#     loop_match_minimum_response_fine: 0.45
-
-#     # Correlation Parameters - Correlation Parameters
-#     correlation_search_space_dimension: 0.5
-#     correlation_search_space_resolution: 0.01
-#     correlation_search_space_smear_deviation: 0.1 
-
-#     # Correlation Parameters - Loop Closure Parameters
-#     loop_search_space_dimension: 8.0
-#     loop_search_space_resolution: 0.05
-#     loop_search_space_smear_deviation: 0.03
-
-#     # Scan Matcher Parameters
-#     distance_variance_penalty: 0.5      
-#     angle_variance_penalty: 1.0    
-
-#     fine_search_angle_offset: 0.00349     
-#     coarse_search_angle_offset: 0.349   
-#     coarse_angle_resolution: 0.0349        
-#     minimum_angle_penalty: 0.9
-#     minimum_distance_penalty: 0.5
-#     use_response_expansion: true
